--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="error_unknown">An unknown error occurred. Try again later</string>
     <string name="search_nothingFound">The user does not exists or has no public repositories</string>
     <string name="username">Username</string>
+    <string name="downloads">Downloads</string>
 </resources>
