add handling download cancellation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="downloads_state_started">Downloading…</string>
     <string name="downloads_state_finished">Downloaded</string>
     <string name="downloads_state_failed">Failed</string>
+    <string name="downloads_state_cancelled">Cancelled</string>
 </resources>
