--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="error_connection">Connection error. Try again later</string>
     <string name="error_tooManyRequests">Too many requests. Try again later</string>
     <string name="error_unknown">An unknown error occurred. Try again later</string>
-    <string name="search_nothingFound">The user does not exists or has no public repositories</string>
+    <string name="search_nothingFound">The user does not exist or has no public repositories</string>
     <string name="username">Username</string>
     <string name="downloads">Downloads</string>
     <string name="downloads_empty">You have no downloads yet</string>
